--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5a992">  <td>24/05/26 12:50:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Base.launch()[pri:0, instance:hooks.Base@71def8f8]">launch</td> 
-  <td>main@124888672</td>   <td></td> </tr>
-<tr bgcolor="a5a992">  <td>24/05/26 12:50:12</td>   <td>9358</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closet()[pri:0, instance:hooks.Base@71def8f8]">&lt;&lt;closet</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>24/06/03 11:45:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrder.launch()[pri:0, instance:hooks.SubmitOrder@53fdffa1]">launch</td> 
+  <td>main@1064265473</td>   <td></td> </tr>
+<tr bgcolor="a5a992">  <td>24/06/03 11:45:45</td>   <td>7248</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubmitOrder.closet()[pri:0, instance:hooks.SubmitOrder@53fdffa1]">&lt;&lt;closet</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1064265473</td>   <td></td> </tr>
 </table>
